--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7083,6 +7083,8 @@ button {
     font-size: 2em; }
     #pg--iteration div.instructions h2 span {
       float: right; }
+      #pg--iteration div.instructions h2 span button {
+        padding: 2px 0px 2px 10px; }
   #pg--iteration div.instructions button.ion-close {
     font-size: 1em;
     line-height: normal;
@@ -7094,7 +7096,7 @@ button {
     line-height: normal; }
   @media (max-width: 767px) {
     #pg--iteration div.instructions {
-      font-size: 0.8em; } }
+      font-size: 1em; } }
 #pg--iteration div.bar-footer {
   background-color: #277FE9;
   display: -webkit-box;
